# rs-summer-2025-labs-ohdurda

./: 404.html  README.md  index.html  mkdocs.yml
assets/labs/lab_0/: index.html
assets/lectures/lecture_1/: index.html
assets/projects/bare_soil/: index.html
assets/projects/beekeeping/: index.html
assets/projects/chl_a/: index.html
assets/projects/mining_sites/: index.html
assets/projects/soil_moisture/: index.html
assets/projects/soil_tillage/: index.html
assets/projects/water_quality/: index.html
assets/projects/wheat_monitoring/: index.html
contact/: index.html
docs/: contact.md  index.md  introduction.md  labs.md  projects.md
docs/assets/labs/: lab_0.md
docs/assets/lectures/: lecture_1.md
docs/assets/projects/: bare_soil.md  beekeeping.md  chl_a.md  mining_sites.md  soil_moisture.md  soil_tillage.md  water_quality.md  wheat_monitoring.md
geoapps/: pyproject.toml
geoapps/geoapps/lab03/: cloud_mosaic.py
introduction/: index.html
labs/: index.html
notebooks/: lab-1.ipynb  lab-2.ipynb  lab-3.ipynb  lab-4.ipynb  lab-5.ipynb  lab-6.ipynb
projects/: index.html
research/: index.html
search/: search_index.json
team/: index.html
